--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "apollo-server-core": "^3.6.7",
     "apollo-server-express": "^3.6.7",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "graphql": "^16.4.0",
+    "graphql-iso-date": "^3.6.1",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
